# niryo_two_ros

./: .gitignore  e reference frame  niryo_two_ros.code-workspace  requirements.txt
install/: local_setup.sh  setup.sh
src/dynamixel_sdk/: CMakeLists.txt  package.xml
src/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.hpp  group_bulk_read.hpp  group_bulk_write.hpp  group_sync_read.hpp  group_sync_write.hpp  packet_handler.hpp  port_handler_linux.hpp  port_handler_windows.hpp  protocol1_packet_handler.hpp  protocol2_packet_handler.hpp
src/dynamixel_sdk/src/: group_bulk_read.cpp  group_bulk_write.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_linux.cpp  port_handler_windows.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
src/mcp_can_rpi/: CMakeLists.txt  package.xml
src/mcp_can_rpi/include/mcp_can_rpi/: mcp_can_dfs_rpi.hpp  mcp_can_rpi.hpp
src/mcp_can_rpi/src/: mcp_can_rpi.cpp
src/niryo_one_commander/: package.xml  setup.cfg  setup.py
src/niryo_one_commander/src/niryo_one_commander/: arm_commander.py  move_group_arm.py  moveit_utils.py  niryo_one_commander_node.py  niryo_one_robot_state_publisher.py  parameters_validation.py  position_manager.py  robot_commander.py  tool_commander.py  trajectory_manager.py
src/niryo_one_commander/src/niryo_one_commander/trajectory/: trajectory_file_handler.py
src/niryo_one_commander2/: package.xml
src/niryo_one_description/: CMakeLists.txt  package.xml
src/niryo_one_description/launch/: display.launch.py  without_meshes_display.launch.py
src/niryo_one_description/rviz/: niryo_one.rviz
src/niryo_one_description/urdf/v1/: niryo_one.urdf.xacro  without_mesh_niryo_one.urdf.xacro
src/niryo_one_description/urdf/v2/: niryo_one.urdf.xacro  niryo_one_description.urdf.xacro  without_mesh_niryo_one.urdf.xacro
src/niryo_one_description/urdf/v2/inc/: create_link.xacro
src/niryo_one_driver/: CMakeLists.txt  package.xml
src/niryo_one_driver/config/: niryo_one_controllers.yaml
src/niryo_one_driver/include/niryo_one_driver/: can_communication.h  can_communication.hpp  change_hardware_version.hh  change_hardware_version.hpp  communication_base.h  communication_base.hpp  dxl_communication.h  dxl_communication.hpp  dxl_driver.h  dxl_driver.hpp  dxl_motor_state.h  dxl_motor_state.hpp  fake_communication.h  fake_communication.hpp  motor_offset_file_handler.h  motor_offset_file_handler.hpp  niryo_one_can_driver.h  niryo_one_can_driver.hpp  niryo_one_communication.h  niryo_one_communication.hpp  niryo_one_hardware_interface.h  niryo_one_hardware_interface.hpp  ros_interface.h  ros_interface.hpp  rpi_diagnostics.h  rpi_diagnostics.hpp  stepper_motor_state.h  stepper_motor_state.hpp  test_motors.h  test_motors.hpp  xl320_driver.h  xl320_driver.hpp  xl430_driver.hpp  xxl430_driver.h
src/niryo_one_driver/scripts/: subscriber_member_function.py
src/niryo_one_driver/src/: niryo_one_driver_node.cpp  niryo_one_hardware_interface.cpp  publisher_lambda_function.cpp  ros_interface.cpp  rpi_diagnostics.cpp  test_motors.cpp
src/niryo_one_driver/src/hw_comm/: can_communication.cpp  dxl_communication.cpp  fake_communication.cpp  niryo_one_communication.cpp
src/niryo_one_driver/src/hw_driver/: dxl_driver.cpp  niryo_one_can_driver.cpp  xl320_driver.cpp  xl430_driver.cpp
src/niryo_one_driver/src/utils/: change_hardware_version.cpp  motor_offset_file_handler.cpp
src/niryo_one_hardware/: CMakeLists.txt  niryo_one_hardware.xml  package.xml
src/niryo_one_hardware/bringup/config/: niryo_one_controller.yaml  niryo_one_hardware_params.yaml
src/niryo_one_hardware/bringup/launch/: debug.launch.py  fix.launch.py  interface.launch.py  niryo_one_controller.launch.py  send_trajectory.launch.py
src/niryo_one_hardware/controller/: niryo_one_controller.cpp
src/niryo_one_hardware/controller/include/niryo_one_hardware/: niryo_one_controller.hpp  stepper_motor.hpp
src/niryo_one_hardware/description/launch/: view_niryo_one.launch.py
src/niryo_one_hardware/description/ros2_control/: niryo_one.ros2_control.xacro
src/niryo_one_hardware/description/urdf/: niryo_one.urdf.xacro  test.urdf.xacro
src/niryo_one_hardware/hardware/: fix.cpp  fix_id.cpp  niryo_one_hardware.cpp  niryo_one_hardware_can.cpp  niryo_one_hardware_dxl.cpp
src/niryo_one_hardware/hardware/include/niryo_one_hardware/: can_communication.hpp  change_hardware_version.hpp  communication_base.hpp  dxl_communication.hpp  dxl_driver.hpp  dxl_motor_state.hpp  fake_communication.hpp  interface_constants.hpp  motor_offset_file_handler.hpp  niryo_one_can_driver.hpp  niryo_one_communication.hpp  niryo_one_hardware.hpp  niryo_one_hardware_can.hpp  niryo_one_hardware_dxl.hpp  stepper_motor_state.hpp  utilities.hpp  xl320_driver.hpp  xl430_driver.hpp
src/niryo_one_hardware/hardware/src/hw_comm/: can_communication.cpp  dxl_communication.cpp  fake_communication.cpp  niryo_one_communication.cpp
src/niryo_one_hardware/include/niryo_one_hardware/: ros_interface.hpp  rpi_diagnostics.hpp  test_motors.hpp
src/niryo_one_hardware/reference_generator/: send_trajectory.cpp
src/niryo_one_hardware/src/: ros_interface.cpp  test_motors.cpp
src/niryo_one_hardware/test/: test_niryo_one_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/niryo_one_msgs/: CMakeLists.txt  README.md  package.xml
src/niryo_one_msgs/msg/: HardwareStatus.msg  RobotMoveCommand.msg  RobotState.msg  ToolCommand.msg
src/niryo_one_msgs/srv/: CloseGripper.srv  GetCalibrationCam.srv  GetTrajectoryList.srv  GetWorkspaceList.srv  SetConveyor.srv
src/niryo_one_rpi/: README.md  package.xml  setup.cfg  setup.py
src/niryo_one_rpi/launch/: niryo_one_rpi.launch.py
src/niryo_one_rpi/niryo_one_rpi/: digital_io_panel.py  fans_manager.py  led_manager.py  motor_debug.py  niryo_one_button.py  niryo_one_ros_setup.py  niryo_one_rpi_node.py  ros_logs_manager.py  rpi_ros_utils.py  shutdown_manager.py  wifi_connection.py
src/niryo_one_rpi/niryo_one_rpi/wifi/: broadcast.py  flask_views.py  flask_viiews.py  network_manager.py  robot_name_handler.py
(+694 files in other folders)
