<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_one_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noldona@gmail.com">noldona</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>niryo_one_msgs</depend>
  <depend>mcp_can_rpi</depend>
  <depend>dynamixel_sdk</depend>
  <depend>urdf</depend>

  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <test_depend>ament_index_cpp</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
