<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_one_rpi</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="noldona@gmail.com">noldona</maintainer>
  <license>GPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>niryo_one_msgs</depend>
  <run_depend>python-flask</run_depend>
  <run_depend>python-pymodbus</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>gpiozero</run_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
